feat(backend): chat now supports nicknames

--- a/backend/index.html
+++ b/backend/index.html
@@ -8,7 +8,7 @@
     <pre id="output"></pre>
 
     <script>
-      url = 'ws://localhost:8080/ws?lobby=ciao';
+      url = 'ws://localhost:8080/ws?lobby=ciao&nickname=nylone';
       c = new WebSocket(url);
       
       send = function(data){
